--- a/HTML_CSS/google-homepage/index.html
+++ b/HTML_CSS/google-homepage/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
-        <li id = "nav-left">About</li>
-        <li id = "nav-left">Store</li>
-        <li id = "nav-right">Gmail</li>
-        <li id = "nav-right">Images</li>
-    </ul>
 
-    <div class = "logo">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-    </div>
-   
-    <div class = "search">
-        <input type="text" name="searchBar" id="searchbar" placeholder="Search Google or Type URL">
-        <input type="button" value="Google Search" id="search_button">
-      
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Homepage Replica</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <nav class="nav-container">
+        <div class="nav-bar-left">
+            <ul>
+                <li> <a href="#">About</a></li>
+                <li> <a href="#">Store</a></li>
+            </ul>
+        </div>
+        <div class="nav-bar-right">
+            <ul>
+                <li> <a href="#">Gmail</a></li>
+                <li> <a href="#">Store</a></li>
+                <li> <a href="#">About</a></li>
+                <li> <a href="#">Store</a></li>
+            </ul>
+
+        </div>
+    </nav>
+
 </body>
+
 </html>
