--- a/HTML_CSS/google-homepage/index.html
+++ b/HTML_CSS/google-homepage/index.html
@@ -10,24 +10,70 @@
 </head>
 
 <body>
-    <nav class="nav-container">
-        <div class="nav-bar-left">
-            <ul>
-                <li> <a href="#">About</a></li>
-                <li> <a href="#">Store</a></li>
-            </ul>
+    <header>
+        <nav class="nav-container">
+            <div class="nav-bar-left">
+                <ul>
+                    <li> <a href="#">About</a></li>
+                    <li> <a href="#">Store</a></li>
+                </ul>
+            </div>
+            <div class="nav-bar-right">
+                <ul>
+                    <li> <a href="#">Gmail</a></li>
+                    <li> <a href="#">Images</a></li>
+                    <li>
+                        <a href="#"><img class="square-icon" src="https://i.imgur.com/9JAcYhG.png" alt="square icon"></a>
+                    </li>
+                    <li> <a href="#">Store</a></li>
+                </ul>
+
+            </div>
+        </nav>
+    </header>
+
+
+    <section class="content-container">
+        <div class="logo">
+            <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/284f0cdc998be7e4751e29e8458323ad5d320303/foundations/the_front_end/project_html_css/imgs/00.png" alt="">
         </div>
-        <div class="nav-bar-right">
-            <ul>
-                <li> <a href="#">Gmail</a></li>
-                <li> <a href="#">Store</a></li>
-                <li> <a href="#">About</a></li>
-                <li> <a href="#">Store</a></li>
-            </ul>
+
+        <div class="form-container">
+            <form>
+                <label class="search-container">
+                    <input type="text" title = "Search">
+                </label>
+            </form>
+            <!-- Buttons-->
+            <div class="buttons">
+                <button>Google Search</button>
+                <button>I'm Feeling Lucky   </button>
+            </div>
 
         </div>
-    </nav>
+    </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-links">
+            <ul class="Info">
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">How Search Works</a></li>
+            </ul>
+
+            <ul class="Message">
+                <li><a href="#">Today's Message</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Settings</a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
